# dev-to-bot-kick

./: Cargo.toml  Makefile.toml  README.md  index.html  index.js  manifest_v3.json
scripts/: fixup_manifest.py
src/: lib.rs
static-files/: manifest_v3.json
